--- a/uzduotis3.css
+++ b/uzduotis3.css
@@ -4,6 +4,8 @@ body {
 }
 .container {
   display: grid;
+  /* justify-content: baseline; */
+  /* align-content: space-between; */
   grid-template-rows: repeat(11 400px);
   grid-template-columns: repeat(22 2fr);
   font-size: 1rem;
@@ -25,82 +27,82 @@ body {
 }
 .box-3 {
   grid-row: 2;
-  grid-column: 1/5;
+  grid-column: 1/4;
   background-color: yellow;
 }
 .box-4 {
   grid-row: 2;
-  grid-column: 5/23;
+  grid-column: 4/23;
   background-color: yellow;
 }
 .box-5 {
   grid-row: 3;
-  grid-column: 1/7;
+  grid-column: 1/6;
   background-color: yellow;
 }
 .box-6 {
   grid-row: 3;
-  grid-column: 7/23;
+  grid-column: 6/23;
   background-color: yellow;
 }
 .box-7 {
   grid-row: 4;
-  grid-column: 1/9;
+  grid-column: 1/8;
   background-color: yellow;
 }
 .box-8 {
   grid-row: 4;
-  grid-column: 9/23;
+  grid-column: 8/23;
   background-color: yellow;
 }
 .box-9 {
   grid-row: 5;
-  grid-column: 1/11;
+  grid-column: 1/10;
   background-color: yellow;
 }
 .box-10 {
   grid-row: 5;
-  grid-column: 11/23;
+  grid-column: 10/23;
   background-color: yellow;
 }
 .box-11 {
   grid-row: 6;
-  grid-column: 1/13;
+  grid-column: 1/12;
   background-color: yellow;
 }
 .box-12 {
   grid-row: 6;
-  grid-column: 13/23;
+  grid-column: 12/23;
   background-color: yellow;
 }
 .box-13 {
   grid-row: 7;
-  grid-column: 1/15;
+  grid-column: 1/14;
   background-color: yellow;
 }
 .box-14 {
   grid-row: 7;
-  grid-column: 15/23;
+  grid-column: 14/23;
   background-color: yellow;
 }
 .box-15 {
   grid-row: 8;
-  grid-column: 1/17;
+  grid-column: 1/16;
   background-color: yellow;
 }
 .box-16 {
   grid-row: 8;
-  grid-column: 17/23;
+  grid-column: 16/23;
   background-color: yellow;
 }
 .box-17 {
   grid-row: 9;
-  grid-column: 1/19;
+  grid-column: 1/18;
   background-color: yellow;
 }
 .box-18 {
   grid-row: 9;
-  grid-column: 19/23;
+  grid-column: 18/23;
   background-color: yellow;
 }
 .box-19 {
