--- a/uzduotis2.css
+++ b/uzduotis2.css
@@ -15,147 +15,74 @@ body {
 
   gap: 10px;
 }
+.deco {
+  background-color: yellow;
+  place-content: center;
+}
 .box_1 {
   grid-row: 1/13;
-  grid-column: 1;
-  background-color: yellow;
+  /* grid-column: 1; */
 }
 
 .box_2 {
   grid-row: 1/7;
-  grid-column: 2;
-  background-color: yellow;
+  /* grid-column: 2; */
 }
 .box_3 {
   grid-row: 7/13;
-  grid-column: 2;
-  background-color: yellow;
+  /* grid-column: 2; */
 }
 .box_4 {
   grid-row: 1/5;
-  grid-column: 3;
-  background-color: yellow;
+  /* grid-column: 3; */
 }
 .box_5 {
   grid-row: 5/9;
-  grid-column: 3;
-  background-color: yellow;
+  /* grid-column: 3; */
 }
 
 .box_6 {
   grid-row: 9/13;
-  grid-column: 3;
-  background-color: yellow;
+  /* grid-column: 3; */
 }
 .box_7 {
   grid-row: 1/4;
-  grid-column: 4;
-  background-color: yellow;
+  /* grid-column: 4; */
 }
 .box_8 {
   grid-row: 4/7;
-  grid-column: 4;
-  background-color: yellow;
+  /* grid-column: 4; */
 }
 .box_9 {
   grid-row: 7/10;
-  grid-column: 4;
-  background-color: yellow;
+  /* grid-column: 4; */
 }
 .box_10 {
   grid-row: 10/13;
-  grid-column: 4;
-  background-color: yellow;
+  /* grid-column: 4; */
 }
 .box_11 {
   grid-row: 1/3;
-  grid-column: 5;
-  background-color: yellow;
+  /* grid-column: 5; */
 }
 .box_12 {
   grid-row: 3/5;
-  grid-column: 5;
-  background-color: yellow;
+  /* grid-column: 5; */
 }
 .box_13 {
   grid-row: 5/7;
-  grid-column: 5;
-  background-color: yellow;
+  /* grid-column: 5; */
 }
 
 .box_14 {
   grid-row: 7/9;
-  grid-column: 5;
-  background-color: yellow;
+  /* grid-column: 5; */
 }
 .box_15 {
   grid-row: 9/11;
-  grid-column: 5;
-  background-color: yellow;
+  /* grid-column: 5; */
 }
 .box_16 {
   grid-row: 11/13;
-  grid-column: 5;
-  background-color: yellow;
-}
-
-.box_17 {
-  grid-row: 1;
-  grid-column: 6;
-  background-color: yellow;
-}
-.box_18 {
-  grid-row: 2;
-  grid-column: 6;
-  background-color: yellow;
-}
-.box_19 {
-  grid-row: 3;
-  grid-column: 6;
-  background-color: yellow;
-}
-.box_20 {
-  grid-row: 4;
-  grid-column: 6;
-  background-color: yellow;
-}
-.box_21 {
-  grid-row: 5;
-  grid-column: 6;
-  background-color: yellow;
-}
-.box_22 {
-  grid-row: 6;
-  grid-column: 6;
-  background-color: yellow;
-}
-.box_23 {
-  grid-row: 7;
-  grid-column: 6;
-  background-color: yellow;
-}
-.box_24 {
-  grid-row: 8;
-  grid-column: 6;
-  background-color: yellow;
-}
-.box_25 {
-  grid-row: 9;
-  grid-column: 6;
-  background-color: yellow;
-}
-.box_26 {
-  grid-row: 10;
-  grid-column: 6;
-  background-color: yellow;
-}
-.box_27 {
-  grid-row: 11;
-  grid-column: 6;
-  background-color: yellow;
-}
-.box_28 {
-  grid-row: 12;
-  grid-column: 6;
-  background-color: yellow;
+  /* grid-column: 5; */
 }
