--- a/uzduotis3.css
+++ b/uzduotis3.css
@@ -7,121 +7,103 @@ body {
   /* justify-content: baseline; */
   /* align-content: space-between; */
   grid-template-rows: repeat(11 400px);
-  grid-template-columns: repeat(22 2fr);
-  font-size: 1rem;
-  padding: 10px;
+  grid-template-columns: repeat(2 2fr);
+  /* font-size: 1rem; */
   height: 50px;
   gap: 10px;
   color: rgb(24, 24, 24);
   text-align: center;
 }
-.box-1 {
-  grid-row: 1;
-  grid-column: 1/3;
+.deco {
   background-color: yellow;
+  place-content: center;
+}
+
+.box-1 {
+  /* grid-row: 1; */
+  grid-column: 1/3;
 }
 .box-2 {
-  grid-row: 1;
+  /* grid-row: 1; */
   grid-column: 3/23;
-  background-color: yellow;
 }
 .box-3 {
-  grid-row: 2;
+  /* grid-row: 2; */
   grid-column: 1/4;
-  background-color: yellow;
 }
 .box-4 {
-  grid-row: 2;
+  /* grid-row: 2; */
   grid-column: 4/23;
-  background-color: yellow;
 }
 .box-5 {
-  grid-row: 3;
+  /* grid-row: 3; */
   grid-column: 1/6;
-  background-color: yellow;
 }
 .box-6 {
-  grid-row: 3;
+  /* grid-row: 3; */
   grid-column: 6/23;
-  background-color: yellow;
 }
 .box-7 {
-  grid-row: 4;
+  /* grid-row: 4; */
   grid-column: 1/8;
-  background-color: yellow;
 }
 .box-8 {
-  grid-row: 4;
+  /* grid-row: 4; */
   grid-column: 8/23;
-  background-color: yellow;
 }
 .box-9 {
-  grid-row: 5;
+  /* grid-row: 5; */
   grid-column: 1/10;
-  background-color: yellow;
 }
 .box-10 {
-  grid-row: 5;
+  /* grid-row: 5; */
   grid-column: 10/23;
-  background-color: yellow;
 }
 .box-11 {
-  grid-row: 6;
+  /* grid-row: 6; */
   grid-column: 1/12;
-  background-color: yellow;
 }
 .box-12 {
-  grid-row: 6;
+  /* grid-row: 6; */
   grid-column: 12/23;
-  background-color: yellow;
 }
 .box-13 {
-  grid-row: 7;
+  /* grid-row: 7; */
   grid-column: 1/14;
-  background-color: yellow;
 }
 .box-14 {
-  grid-row: 7;
+  /* grid-row: 7; */
   grid-column: 14/23;
-  background-color: yellow;
 }
 .box-15 {
-  grid-row: 8;
+  /* grid-row: 8; */
   grid-column: 1/16;
-  background-color: yellow;
 }
 .box-16 {
-  grid-row: 8;
+  /* grid-row: 8; */
   grid-column: 16/23;
-  background-color: yellow;
 }
 .box-17 {
-  grid-row: 9;
+  /* grid-row: 9; */
   grid-column: 1/18;
-  background-color: yellow;
 }
 .box-18 {
-  grid-row: 9;
+  /* grid-row: 9; */
   grid-column: 18/23;
-  background-color: yellow;
 }
 .box-19 {
-  grid-row: 10;
+  /* grid-row: 10; */
   grid-column: 1/20;
-  background-color: yellow;
 }
 .box-20 {
-  grid-row: 10;
+  /* grid-row: 10; */
   grid-column: 20/23;
-  background-color: yellow;
 }
 .box-21 {
-  grid-row: 11;
+  /* grid-row: 11; */
   grid-column: 1/21;
-  background-color: yellow;
 }
 .box-22 {
-  grid-row: 11;
+  /* grid-row: 11; */
   grid-column: 21/23;
-  background-color: yellow;
 }
